--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.0",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4"
   },
